--- a/BuyingPower/BuyingPower.csproj
+++ b/BuyingPower/BuyingPower.csproj
@@ -61,9 +61,14 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.Http.Extensions" Version="2.3.0" />
+        <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="9.0.4" />
+        <PackageReference Include="Microsoft.Extensions.Features" Version="9.0.4" />
+        <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="9.0.4" />
         <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.0" />
+        <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Utils" Version="9.0.0" />
     </ItemGroup>
 
 </Project>
